--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1 class="bounce">Happy Birthday Boss!</h1>
         <img src="./IMG_0082.jpeg" alt="BOSS">
         <p>
-            wishing you a day and years to come filled happiness, laughter,sucess,favor,grace,strenght and health.
-            May everything workout in your favor.
+            Wishing you a day and years to come filled with happiness, laughter, sucess, favor, grace, strenght and health. <br>
+            May everything work out in your favor.<br>
             Enjoy your special day!
             <div class="chop-btn"><button>Enjoy!🎉✌️</button></div>
             
